# AutoHinge

./: .gitignore  README.md
app/: .env.example  cleanup_old_files.py  extraction.py  graphs.py  handle_matches.py  helper_functions.py  llm_client.py  log_match.py  manual_scoring.py  matches.py  openers.py  prompts.py  pyproject.toml  runtime.py  scoring.py  sqlite_store.py  start.py  sync_matches.py  ui_scan.py  verify_import.py
app/ml/: embed_faces.py  extract_faces.py  labelling_ui.py  ml_validation.py  predict_aesthetic.py  test_zsllm.py  train_model.py
